# vibelabs-skills

./: LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: claude-code-meetup-followup-email.md  marketing-plan.md
plugins/vibelabs-content/.claude-plugin/: plugin.json
plugins/vibelabs-content/skills/: instagram-pipeline  klarsprak  transcribe  transparency-generation
plugins/vibelabs-development/.claude-plugin/: plugin.json
plugins/vibelabs-development/skills/: changelog  ios-development  soft-glass-ui
plugins/vibelabs-operations/.claude-plugin/: plugin.json
plugins/vibelabs-operations/skills/: bunny-net  fiken-accounting
skills/bunny-net/: SKILL.md
skills/changelog/: SKILL.md
skills/company-research/: SKILL.md
skills/fiken-accounting/: SKILL.md
skills/google-deep-research/: SKILL.md
skills/instagram-pipeline/: SKILL.md
skills/instagram-pipeline/scripts/: pyproject.toml  requirements-extract.txt  requirements.txt  setup.sh
skills/instagram-pipeline/scripts/socmed/: __init__.py  config.py
skills/instagram-pipeline/scripts/socmed/models/: __init__.py  sync_state.py
skills/instagram-pipeline/scripts/socmed/storage/: __init__.py  json_store.py  sync_tracker.py
skills/instagram-pipeline/scripts/socmed/utils/: __init__.py  retry.py
skills/ios-development/: SKILL.md
skills/klarsprak/: SKILL.md
skills/parallel-research/: SKILL.md
skills/soft-glass-ui/: SKILL.md
skills/transcribe/: SKILL.md
skills/transparency-generation/: SKILL.md
skills/world-building/: SKILL.md
skills/world-building/references/: pillars.md  (+4 more)
(+5 files in other folders)
